# cgal-public-dev

./: CGALConfig.cmake  CGALExports.cmake  README.md  cmake_uninstall.cmake  install_manifest.txt
Installation/src/CGAL/: all_files.cpp
Installation/src/CGAL_Core/: all_files.cpp
Installation/src/CGAL_ImageIO/: all_files.cpp
Installation/src/CGAL_Qt5/: all_files.cpp  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp
Level_of_detail/include/CGAL/Base/: Level_of_detail_base.h
Level_of_detail/include/CGAL/Buildings/: Level_of_detail_building_splitter.h
Level_of_detail/test/Level_of_detail/tdd/Simon/: CMakeLists.txt
config/: CGALConfig.cmake
demo/Optimal_transportation_reconstruction_2/: moc_dialog_options.cxx_parameters  moc_glviewer.cxx_parameters  moc_window.cxx_parameters
demo/Polyhedron/: CGAL_polyhedron_demoConfig.cmake  polyhedron_demo_targets.cmake
include/CGAL/: version.h
